set correct resolution on click on the UI